# ParallelFourierSolvers2

./: .gitignore  CMakeLists.txt  README.txt
cmake/: FindMKL.cmake  function.cmake
scripts/running_wave/run/: args.py  args_cluster.py  run_all_and_plot_graphics_windows.py  run_just_parallel.py  run_mpi_fft.py  run_sequential.py
scripts/running_wave/run/different_results/weak_cascade_lake/: plot.py
scripts/running_wave/run/time_test/: test_MPI_strong_scalability.py  test_MPI_weak_scalability.py  test_OpenMP.py  test_sequential.py
scripts/running_wave/scripts/: analyse_results_and_plot_graphics.py  angle_calc_error.py  calculate_courant.py  collect_results_running_wave.py  collect_results_running_wave_par.py  compare_cons_PSTD_and_PSATD_running_wave.py  n_guards_collect_error.py  plot_all_graphics_for_running_wave.py
scripts/running_wave/time_scripts/div_along_x/: commandArgs.py  scal_guard_size.py  scal_omp.py  strong_scal_global.py  strong_scal_local.py  weak_scal_global.py  weak_scal_local.py
scripts/running_wave/time_scripts/div_along_x/one_node/: commandArgs.py  scal_guard_size.py  scal_mpi_fft.py  scal_omp.py  scal_omp_fft.py  strong_scal_global.py  strong_scal_local.py  test_correct.py  test_run.py  weak_scal_global.py  weak_scal_local.py
scripts/running_wave/time_scripts/div_along_x/one_node/fft_fftw/fftw_estimate/: create_table.py
scripts/running_wave/time_scripts/div_along_x/one_node/fft_fftw/fftw_measure/: create_table.py
scripts/running_wave/time_scripts/div_along_x/one_node/fft_mkl/: create_table.py
scripts/saved_results/: code_version.txt
scripts/saved_results/dispersion/: calculate_dispersion.py
scripts/saved_results/filter_and_low_freq_error/: args.py
scripts/saved_results/spherical_wave_4_domains/: args.py
scripts/scripts/: compute_error.py  delete_graphics_in_dir.py  equals_files.py  graphics.py  plot_all_in_dir.py  plot_difference.py  read_file.py
scripts/spherical_wave/run/: args.py  run_all_and_plot_graphics_windows.py  run_sequential.py
scripts/spherical_wave/scripts/: analyse_results_and_plot_graphs.py  collect_results_spherical_wave.py  collect_results_spherical_wave_w_div_dt_const.py  compare_cons_PSTD_and_PSATD_spherical_wave.py  compare_par_PSTD_and_PSATD_spherical_wave.py  plot_all_graphics_for_spherical_wave.py  plot_consistent_iterations_for_spherical_wave.py
scripts/spherical_wave/scripts/new/: plot_diff.py
scripts/spherical_wave/test/J/: .gitkeep
scripts/tight_focusing/run/: args.py  plot.py  process.py  run_all.py  run_mpi_fft.py
src/: CMakeLists.txt
src/parallel_fourier_solvers/: CMakeLists.txt
src/parallel_fourier_solvers/include/: array3d.h  class_member_ptr.h  field_solver.h  file_writer.h  filter.h  fourier_transform.h  grid3d.h  grid_params.h  mask.h  mpi_worker.h  mpi_wrapper.h  mpi_wrapper_3d.h  my_complex.h  parallel_fourier_solver.h  parallel_scheme.h  physical_constants.h  process_info.h  simple_types.h  status.h  vector3d.h
src/parallel_fourier_solvers/src/: field_solver.cpp  field_solver_FDTD.cpp  field_solver_PSATD.cpp  field_solver_PSTD.cpp  file_writer.cpp  filter.cpp  fourier_transform.cpp  grid3d.cpp  mask.cpp  mpi_worker.cpp  mpi_wrapper_3d.cpp  parallel_fourier_solver.cpp  parallel_scheme.cpp
src/tasks/: CMakeLists.txt
src/tasks/include/: command_line_parser.h  task_parameters.h  task_parser.h  test_parallel.h
src/tasks/running_wave/: CMakeLists.txt
src/tasks/running_wave/include/: parser_running_wave.h  running_wave.h
src/tasks/running_wave/running_wave_benchmarks_fft/: CMakeLists.txt
src/tasks/running_wave/running_wave_benchmarks_fft/global_fft_mpi/: CMakeLists.txt
src/tasks/running_wave/running_wave_benchmarks_fft/global_fft_mpi/src/: main.cpp  main_running_wave_global_fft_mpi.cpp
src/tasks/running_wave/running_wave_benchmarks_fft/global_fft_omp/: CMakeLists.txt
src/tasks/running_wave/running_wave_benchmarks_fft/global_fft_omp/src/: main.cpp  main_running_wave_global_fft_omp.cpp
src/tasks/running_wave/running_wave_global_fft/: CMakeLists.txt
src/tasks/running_wave/running_wave_global_fft/src/: main.cpp  main_running_wave_global_fft.cpp
src/tasks/running_wave/running_wave_just_parallel/: CMakeLists.txt
src/tasks/running_wave/running_wave_just_parallel/include/: test_running_wave_just_parallel.h
src/tasks/running_wave/running_wave_just_parallel/src/: main.cpp  main_running_wave_just_parallel.cpp
src/tasks/running_wave/running_wave_parallel/: CMakeLists.txt
src/tasks/running_wave/running_wave_parallel/include/: test_running_wave_parallel.h
src/tasks/running_wave/running_wave_parallel/src/: main.cpp  main_running_wave_just_parallel.cpp
src/tasks/running_wave/running_wave_seq_and_par/: CMakeLists.txt
src/tasks/running_wave/running_wave_seq_and_par/src/: main.cpp
src/tasks/running_wave/running_wave_sequential/: CMakeLists.txt
src/tasks/running_wave/running_wave_sequential/src/: main.cpp  main_unning_wave_sequential.cpp
src/tasks/spherical_wave/: CMakeLists.txt
src/tasks/spherical_wave/include/: parser_spherical_wave.h  source.h  spherical_wave.h
src/tasks/spherical_wave/spherical_wave_parallel/: CMakeLists.txt
src/tasks/spherical_wave/spherical_wave_parallel/include/: test_spherical_wave_parallel.h
src/tasks/spherical_wave/spherical_wave_parallel/src/: main.cpp  main_spherical_wave_parallel.cpp
src/tasks/spherical_wave/spherical_wave_sequential/: CMakeLists.txt
src/tasks/spherical_wave/spherical_wave_sequential/src/: main.cpp  main_spherical_wave_sequential.cpp
src/tasks/tight_focusing/: CMakeLists.txt
src/tasks/tight_focusing/include/: parser_tight_focusing.h  tight_focusing.h
src/tasks/tight_focusing/src/: main.cpp
test/gtest/: CMakeLists.txt
test/tests/: CMakeLists.txt
test/tests/src/: test_array3d.cpp  test_fourier_transformation.cpp  test_grid3d.cpp  test_lag.cpp  test_main.cpp  test_mpi_worker.cpp  test_my_complex.cpp  test_running_wave.cpp  test_spherical_wave.cpp  test_vec.cpp
